--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:crazyit="http://schemas.android.com/apk/res-auto"
+   xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
 
+    <com.h520t.wangyinews.splashScreen.TimeView
+        android:id="@+id/timeView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        crazyit:innerColor="@android:color/darker_gray"
+        crazyit:outerColor="@android:color/holo_red_dark"
+        />
 </LinearLayout>
