--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:crazyit="http://schemas.android.com/apk/res-auto"
-   xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
-
-    <com.h520t.wangyinews.splashScreen.TimeView
-        android:id="@+id/timeView"
+    <FrameLayout
+        android:id="@+id/fragment_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        crazyit:innerColor="@android:color/darker_gray"
-        crazyit:outerColor="@android:color/holo_red_dark"
+        android:layout_above="@+id/navigation"
         />
-</LinearLayout>
+
+    <android.support.design.widget.BottomNavigationView
+
+        android:id="@+id/navigation"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/navigation_menu"
+        app:itemIconTint="@null"
+        app:itemTextColor="@color/colorGrey"
+        app:itemBackground="@color/colorWhite"
+        />
+
+</RelativeLayout>
