--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    xmlns:crazyit="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -40,6 +40,20 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY"
              />
+
+
+        <com.h520t.wangyinews.splashScreen.TimeView
+            android:id="@+id/timeView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            crazyit:innerColor="@android:color/darker_gray"
+            crazyit:outerColor="@android:color/holo_red_dark"
+
+            android:layout_alignParentRight="true"
+
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            />
     </RelativeLayout>
 
 </RelativeLayout>
