--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.h520t.wangyinews.news.HostFragment">
+    tools:context="com.h520t.wangyinews.news.news_inner_fragment.HostFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
