--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorGrey">#9E9E9E</color>
+    <color name="colorRed">#F44336</color>
+    <color name="colorWhite">#FFF</color>
+    <color name="red_text">#D50000</color>
+    <color name="grey_text">#757575</color>
 </resources>
