--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -4,9 +4,29 @@
     android:layout_height="match_parent"
     tools:context="com.h520t.wangyinews.news.news_inner_fragment.HostFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
+        android:id="@+id/swipeToLoadLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <!--第一个子代表下拉刷新的头部-->
+        <com.aspsine.swipetoloadlayout.SwipeRefreshHeaderLayout
+            android:id="@id/swipe_refresh_header"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="center" />
 
+        <!--滑动视图主体-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/swipe_target"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!--上拉加载更多的尾部-->
+        <com.aspsine.swipetoloadlayout.SwipeLoadMoreFooterLayout
+            android:id="@id/swipe_load_more_footer"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:gravity="center" />
+
+    </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
 </LinearLayout>
