--- a/app/src/main/res/layout/adapter_home_item2.xml
+++ b/app/src/main/res/layout/adapter_home_item2.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
@@ -60,14 +61,14 @@
 
     <ImageView
         android:id="@+id/play"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignStart="@+id/reply_count_news"
         android:layout_centerHorizontal="true"
         android:scaleType="fitCenter"
-        android:layout_marginEnd="100dp"
         android:layout_marginTop="65dp"
-        app:srcCompat="@drawable/play_circle" />
+        app:srcCompat="@drawable/play_circle"
+        tools:ignore="ContentDescription" />
 
     </RelativeLayout>
 </LinearLayout>
