--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -4,29 +4,26 @@
     android:layout_height="match_parent"
     tools:context="com.h520t.wangyinews.news.news_inner_fragment.HostFragment">
 
-    <com.aspsine.swipetoloadlayout.SwipeToLoadLayout
-        android:id="@+id/swipeToLoadLayout"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <!--第一个子代表下拉刷新的头部-->
-        <com.aspsine.swipetoloadlayout.SwipeRefreshHeaderLayout
-            android:id="@id/swipe_refresh_header"
+        android:layout_height="match_parent"
+        android:background="@android:color/white"
+        app:srlPrimaryColor="#444444"
+        app:srlAccentColor="@android:color/white"
+        app:srlEnablePreviewInEditMode="true">
+        <!--srlAccentColor srlPrimaryColor 将会改变 Header 和 Footer 的主题颜色-->
+        <!--srlEnablePreviewInEditMode 可以开启和关闭预览功能-->
+        <com.scwang.smartrefresh.layout.header.ClassicsHeader
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="center" />
-
-        <!--滑动视图主体-->
+            android:layout_height="60dp"/>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/swipe_target"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-
-        <!--上拉加载更多的尾部-->
-        <com.aspsine.swipetoloadlayout.SwipeLoadMoreFooterLayout
-            android:id="@id/swipe_load_more_footer"
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:gravity="center" />
-
-    </com.aspsine.swipetoloadlayout.SwipeToLoadLayout>
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
