--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -2,9 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/red_text"
+        app:popupTheme="@style/PopupMenu"
+        />
 
-    <RelativeLayout
+<!--    <RelativeLayout
         android:id="@+id/top"
         android:layout_width="match_parent"
         android:layout_height="56dp">
@@ -29,7 +37,7 @@
             android:layout_height="1dp"
             android:layout_alignParentBottom="true"
             android:background="@android:color/darker_gray" />
-    </RelativeLayout>
+    </RelativeLayout>-->
 
     <RelativeLayout
         android:id="@+id/bottom"
@@ -85,7 +93,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottom"
-        android:layout_below="@+id/top"
+        android:layout_below="@+id/tool_bar"
         />
 
 </RelativeLayout>
